--- a/assets/index.html
+++ b/assets/index.html
@@ -30,10 +30,14 @@
 	  <tr>
 		<td><p>Sensor: </p></td>
 		<td><select id="graphPick">
-				<option value="all">all sensors</option>
+				<option selected value="all">all sensors</option>
 				<option value="temperature">Temperature</option>
 				<option value="flow">Flow</option>
 				<option value="pressure">Pressure</option>
+				<option value="pressure2">Pressure2</option>
+				<option value="atmoPressure">Pressure</option>
+				<option value="humidity">Humidity</option>
+				<option value="current">Current</option>
 		</select></td>
       <tr>
         <td><p>Time between updates:</p></td>
