--- a/assets/index.html
+++ b/assets/index.html
@@ -1,61 +1,184 @@
 <html>
-<head>
-  <!-- <link rel="stylesheet" href="style.css"> -->
-  <link rel="stylesheet" href="dark_style.css">
-  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.time.js"></script>
-  <script src="script.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
-</head>
-<body>
-
-  <div id="header">
-    <h2>Connected Device Sensor Data</h2>
-  </div>
-
-  <div id="content">
-    <h3 >Device Identifier: <span id="currentdevice"></span></h3>
-    <div class="demo-container">
-      <div id="placeholder" class="demo-placeholder"></div>
-    </div>
-
-    <p></p>
-    <table width="90%">
-      <col width="200px" />
-      <tr>
-        <td><p>Device Identifer: </p> </td>
-        <td><p><input id="specificdevice" type="text" value="" style="text-align: right; width:10em"></input><p></td>
-      </tr>
-	  <tr>
-		<td><p>Sensor: </p></td>
-		<td><select id="graphPick">
-				<option selected value="all">all sensors</option>
-				<option value="temperature">Temperature</option>
-				<option value="flow">Flow</option>
-				<option value="pressure">Pressure</option>
-				<option value="pressure2">Pressure2</option>
-				<option value="atmoPressure">Pressure</option>
-				<option value="humidity">Humidity</option>
-				<option value="current">Current</option>
-		</select></td>
-      <tr>
-        <td><p>Time between updates:</p></td>
-        <td><p><input id="updateInterval" type="text" value="" style="text-align: right; width:10em"></input> milliseconds [0 = stop]</p></td>
-      </tr>
-      <tr>
-        <td><p>Time Window:</p></td>
-        <td><p><input id="timeWindow" type="text" value="" style="text-align: right; width:10em"></input> minutes</p></td>
-      </tr>
-      <tr>
-        <td><p>Application Status: </p></td>
-        <td><span id="appstatus"> </span></td>
-      </tr>
-      <tr>
-        <td><p>Application Console:</td>
-          <td> <span id="appconsole"> </span></p></td>
-        </tr>
-    </table>
-  </div>
-</body>
+	<head>
+        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="dark_style.css">
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.time.js"></script>
+        <script src="script.js"></script>
+		<script src="script2.js"></script>
+		<script src="script3.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
+	</head>
+	<body>
+		<div id="header">
+			<h2>Parker Hannafin IoT Device Data</h2>
+		</div>
+		<div>
+			<button id="graphButton">Add Graph</button>
+		</div>
+		<div class="contentDiv">
+			
+			<div id="main" class="graphContainer">
+				<div class="inline">
+					<h3 >Device Identifier: <span id="currentdevice"></span></h3>
+					<section class="demo-container">
+					  <div id="placeholder" class="demo-placeholder"></div>
+					</section>
+					<div>
+						<table class = "mainTable">
+							<tr>
+								<td><p>Device Identifer: </p> </td>
+								<td><p><input id="specificdevice" type="text" value="" style="text-align: right; width:10em"></input><p></td>
+							</tr>
+							<tr>
+								<td><p>Sensor: </p></td>
+								<td>
+									<select id="graphPick" autocomplete="off">
+										<option selected value="all">all sensors</option>
+										<option value="temperature">Temperature</option>
+										<option value="flow">Flow</option>
+										<option value="pressure">Pressure</option>
+										<option value="pressure2">Pressure2</option>
+										<option value="humidity">Humidity</option>
+									</select>
+								</td>
+							<tr>
+								<td><p>Time between updates:</p></td>
+								<td><p><input id="updateInterval" type="text" value="" style="text-align: right; width:10em"></input> milliseconds [0 = stop]</p></td>
+							</tr>
+							<tr>
+								<td><p>Time Window:</p></td>
+								<td><p><input id="timeWindow" type="text" value="" style="text-align: right; width:10em"></input> minutes</p></td>
+							</tr>
+							<tr>
+								<td><p>Application Status: </p></td>
+								<td><span id="appstatus"> </span></td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="sleeperDiv2">
+			<div class="contentDiv">
+				<div id="main" class="graphContainer">
+					<div class="inline">
+						<h3 >Device Identifier: <span id="currentdevice2"><div>
+						<button id="remove2'">Remove Graph</button>
+						</div>
+						</span>
+						</h3>
+						<section class="demo-container">
+						<div id="placeholder2" class="demo-placeholder">
+						</div>
+						</section>
+						<div>
+							<table class= "mainTable">
+								<tr>
+									<td><p>Device Identifer: </p> </td>
+									<td><p><input id="specificdevice2" type="text" value="" style="text-align: right; width:10em"></input><p></td>
+								</tr>
+								<tr>
+									<td><p>Sensor: </p></td>
+									<td><select id="graphPick2">
+										<option selected value="all">all sensors</option>
+										<option value="temperature">Temperature</option>
+										<option value="flow">Flow</option>
+										<option value="pressure">Pressure</option>
+										<option value="pressure2">Pressure2</option>
+										<option value="humidity">Humidity</option>
+									</select></td>
+								<tr>
+									<td><p>Time between updates:</p></td>
+									<td><p><input id="updateInterval2" type="text" value="" style="text-align: right; width:10em"></input> milliseconds [0 = stop]</p></td>
+								</tr>
+								<tr>
+									<td><p>Time Window:</p></td>
+									<td><p><input id="timeWindow2" type="text" value="" style="text-align: right; width:10em"></input> minutes</p></td>
+								</tr>
+								<tr>
+									<td><p>Application Status: </p></td>
+									<td><span id="appstatus2"> </span></td>
+								</tr> 
+								<tr>
+									<td><p>Application Console:</td>
+									<td> <span id="appconsole2"> </span></p></td>
+								</tr>
+							</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="sleeperDiv3">
+			<div class="contentDiv">
+				<div id="main" class="graphContainer">
+					<div class="inline">
+						<h3 >Device Identifier: <span id="currentdevice'+ index + '"><div>
+						<button id="remove3">Remove Graph</button>
+						</div>
+						</span>
+						</h3>
+						<section class="demo-container">
+						<div id="placeholder3" class="demo-placeholder">
+						</div>
+						</section>
+						<div>
+							<table class= "mainTable">
+								<tr>
+									<td><p>Device Identifer: </p> </td>
+									<td><p><input id="specificdevice3" type="text" value="" style="text-align: right; width:10em"></input><p></td>
+								</tr>
+								<tr>
+									<td><p>Sensor: </p></td>
+									<td><select id="graphPick3">
+										<option selected value="all">all sensors</option>
+										<option value="temperature">Temperature</option>
+										<option value="flow">Flow</option>
+										<option value="pressure">Pressure</option>
+										<option value="pressure2">Pressure2</option>
+										<option value="humidity">Humidity</option>
+									</select></td>
+								<tr>
+									<td><p>Time between updates:</p></td>
+									<td><p><input id="updateInterval3" type="text" value="" style="text-align: right; width:10em"></input> milliseconds [0 = stop]</p></td>
+								</tr>
+								<tr>
+									<td><p>Time Window:</p></td>
+									<td><p><input id="timeWindow3" type="text" value="" style="text-align: right; width:10em"></input> minutes</p></td>
+								</tr>
+								<tr>
+									<td><p>Application Status: </p></td>
+									<td><span id="appstatus3"> </span></td>
+								</tr> 
+								<tr>
+									<td><p>Application Console:</td>
+									<td> <span id="appconsole3"> </span></p></td>
+								</tr>
+							</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="valueContainer">
+			<table class = "textValue">
+				<tr>
+					<th>Pump </br> Temperature(F)</th>
+					<th>Flow</br>GPM</th>
+					<th>Pressure</br>PSI</th>
+					<th>Pressure2</br>PSI</th>
+					<th>Humidity</br>%</th>
+				</tr>
+				<tr>
+					<td id="currTemp">N/A</td>
+					<td id="currFlow">N/A</td>
+					<td id="currPres">N/A</td>
+					<td id="currPres2">N/A</td>
+					<td id="currHumid">N/A</td>
+				</tr>
+			</table>
+		</div>
+	</body>
 </html>
